// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render An error should be logged if no required props are given 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "zIndex": 100,
      },
    ]
  }
>
  <InputText
    onChangeText={[Function]}
    style={
      Object {
        "paddingVertical": 10,
      }
    }
    value=""
  />
</View>
`;

exports[`Render Autocomplete should render without crashing 1`] = `
<View
  style={
    Array [
      undefined,
      Object {
        "zIndex": 100,
      },
    ]
  }
>
  <InputText
    onChangeText={[Function]}
    placeholder="placeholder text"
    style={
      Object {
        "paddingVertical": 10,
      }
    }
    value=""
  />
</View>
`;
